Preparing Designer scene, fixxing bugs, started implementing swirl

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -4,4 +4,4 @@ MG1.Q2,Who is attending the party ?,Wer ist auf der Party ??
 MG1.Q3,Where can you find the symbol ?,Wo kannst du die Symbole finden ??
 ,,
 C1.Title,Johan Maurits,Johan Moritz
-C1.Description,This is JM the slave trading dude,Das ist JM der Sklavenhandel betreibende Bre
+C1.Description,This is Johan Maurits,Das ist Johan Moritz.
