Added functionality to display images with questions

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -1,6 +1,6 @@
 Key,English,German,Simplified German,Simplified English
 MG1.Q1,Find Johan Maurits!,Finde Johann Moritz!,Finde Johann Moritz!,Find Johan Maurits!
-MG1.Q2,Wo is visiting Johan Maurits at the court 'Vrijburg?,Wer hat Johan Maurits in seinem Palast Freiburg besucht?,Wer hat Johan Maurits in seinem Palast Freiburg besucht?,Wo is visiting Johan Maurits at the court 'Vrijburg?
+MG1.Q2,Who is visiting Johan Maurits at the court 'Vrijburg?,Wer hat Johan Maurits in seinem Palast Freiburg besucht?,Wer hat Johan Maurits in seinem Palast Freiburg besucht?,Wo is visiting Johan Maurits at the court 'Vrijburg?
 MG1.Q3,Where can you find this symbol?,Wo kannst du das Symbol finden?,Wo kannst du das Symbol finden?,Where can you find this symbol?
 ,,,,
 C1.Title,Johan Maurits,Johann Moritz,Johann Moritz,Johan Maurits
