lots of stuff ^
localization language manager for main menu
first version of retrieving info from MG1 and adding new pages
updated animations of book

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -1,6 +1,6 @@
 Key,English,German,Simplified English,Simplified German
 MG1.Q1,Find Johan Maurits!,Finde Johann Moritz!,Find Johan Maurits!,Finde Johann Moritz!
-MG1.Q2,Who is visiting Johan Maurits at the court 'Vrijburg?,Wer hat Johan Maurits in seinem Palast Freiburg besucht?,Wo is visiting Johan Maurits at the court 'Vrijburg?,Wer hat Johan Maurits in seinem Palast Freiburg besucht?
+MG1.Q2,Who is visiting Johan Maurits at the court 'Vrijburg?,Wer hat Johan Maurits in seinem Palast Freiburg besucht?,Who is visiting Johan Maurits at the court 'Vrijburg?,Wer hat Johan Maurits in seinem Palast Freiburg besucht?
 MG1.Q3,Where can you find this symbol?,Wo kannst du das Symbol finden?,Where can you find this symbol?,Wo kannst du das Symbol finden?
 ,,,,
 C1.Title,Johan Maurits,Johann Moritz,Johan Maurits,Johann Moritz
