Simplified and normal was switched around + JM properly placed

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -65,7 +65,7 @@ Look around you, maybe you can find the real painting?","Bevor Johann Moritz nac
 
 Schau dich um - vielleicht findest du das echte Bild?"
 ,,,,
-S2.Title,Bust of Johan Maurits,Statue von Johann Moritz,Bust of Johan Maurits,"Dieses UNFASSBAR wylde Buch hat gottlos viel Swag und wurde von den Machern schlechthin, namentlich Willem Piso (aka der Pisser) und Georg Marggraf (aka MC Megges) gemaked. Dieser fette Schmöker wurde für ne ganze Weile als die Top Informationsquelle Nummero 1 zu brasilianischem Grünzeug anerkannt. MC Megges, der Hustler, hat mies gegrinded und stolze 426 Bilder, die er erst auf Alpha-basis in ein Holzbrett geschnitzt hat, rausgeballert. In diesen Meisterwerken der Sonderklasse hat er mit seinem geschulten Auge die flysten und hippsten lokalen Gegenstände von der Brasilianischen Mommy Natur höchst persönlich gecaptured."
+S2.Title,Bust of Johan Maurits,Statue von Johann Moritz,Bust of Johan Maurits,Statue von Johann Moritz
 S2.Description,"This is a marble bust of Johan Maurits, created by Bartholomeus Eggers. This would not actually have been found in Brazil, as it was commissioned in 1664. ","Das ist eine Marmorbüste von Johann Moritz, die von Bartholomeus Eggers angefertigt wurde. Diese wäre tatsächlich nicht in Brasilien zu finden gewesen, da sie erst in 1664 in Auftrag gegeben wurde. ",This is a bust of Johan Maurits. It is made out of marble and was created by an artist named Bartholomeus Eggers.,Dies ist eine Statue aus Marmor von Johann Moritz. Sie wurde von einem Künstler namens Bartholomeus Eggers gemacht.
 ,,,,
 S3.Title,Map of Mauritsstad,Mauritsstad Stadtkarte,Map of Mauritsstad,Mauritsstad Stadtkarte
