progress on progression system

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -129,3 +129,5 @@ Kannst du Alles finden? Viel Spaß beim Entdecken!"
 TutorialText1,Inspect the object by tapping it.,Untersuche das Objekt in dem du es antippst,Inspect the object by tapping it.,Untersuche das Objekt in dem du es antippst
 TutorialText2,Move the camera by dragging.,Bewege die Kamera in dem du über den Bildschirm wischt ,Move the camera by dragging,Bewege die Kamera in dem du über den Bildschirm wischt
 TutorialText3,"With this button, you can get back to the main menu",Hiermit kommst du zurück ins Hauptmenü,"With this button, you can get back to the main menu",Hiermit kommst du zurück ins Hauptmenü
+,,,,
+QuestionCompleted,Question Completed,Frage abgeschlossen,Ez W,Zu einfach
