Added Blocking of non relevant objects while in a question

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -131,3 +131,7 @@ TutorialText2,Move the camera by dragging.,Bewege die Kamera in dem du über den
 TutorialText3,"With this button, you can get back to the main menu",Hiermit kommst du zurück ins Hauptmenü,"With this button, you can get back to the main menu",Hiermit kommst du zurück ins Hauptmenü
 ,,,,
 QuestionCompleted,Question Completed,Frage abgeschlossen,Ez W,Zu einfach
+,,,,
+Declined.1,This is not Johan Maurits.,Das ist nicht Johann Moritz.,This is not Johan Maurits.,Das ist nicht Johann Moritz.
+Declined.2,This is not a guest. ,Das ist kein Gast. ,This is not a guest. ,Das ist kein Gast. 
+Declined.3,This does not have the symbol on it. ,Hier ist das Symbol nicht zu sehen.,This does not have the symbol on it. ,Hier ist das Symbol nicht zu sehen.
