--- a/Assets/SimpleLocalization/Resources/Localization/MG 2.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 2.csv
@@ -88,3 +88,5 @@ Dreh deine Karte um und ziehe sie auf die richtige Mini-Geschichte, um herauszuf
 Flip & Match your card to the right mini-story to find out what happened!","(Mini) Geschichten! 
 
 Dreh deine Karte um und ziehe sie auf die richtige Mini-Geschichte, um herauszufinden, was passiert ist!"
+E0.TapCard,The Card antappen in order to flippen it,,,
+E0.DragCard,And now dragge it,,,
