--- a/Assets/SimpleLocalization/Resources/Localization/Menu.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/Menu.csv
@@ -9,10 +9,6 @@ BP2,"Art and science by scholars that were sponsored by Johan are still regarded
 ,,,,
 ,,,,
 ,,,,
-,,"Neben einer Vielfalt von wissenschaftlichen und künstlerischen Projekten hat Johann ebenso viele kostspielige und ressourcen-intensive Bauprojekte in der Kolonie veranlasst. Trotz dieser Ausgaben wuchs sein Wohlstand kontinuierlich. Während er sicherlich viel Geld durch den Zuckeranbau erwirtschaftete, ist ein anderer Teil seines Einkommens der Beteiligung am illegalen Sklavenhandel zu verdanken. Diesen hat er nachweislich unterstützt und sogar mit organisiert. Generell war Johann Moritz von Nassau-Siegen nicht bloß kein Gegner der Sklaverei, sondern hatte auch keine Skrupel sich persönlich daran zu bereichern. ","Während Johann Moritz's Amtszeit als Gouverneur der niederländischen Kolonie in Brasilien von 1636 bis 1643 hat er dazu beig transatlantischen Sklavenhandel der Niederlande zu einem profitablen Geschäft gemacht. 
-
-- involved in transatlantic slave trade
-
-- slave owner and trader
-
-- persönliche bereicherung am sklavenhandel",
+,,"Neben einer Vielfalt von wissenschaftlichen und künstlerischen Projekten hat Johann Moritz ebenso viele kostspielige und ressourcen-intensive Bauprojekte in der Kolonie veranlasst. Trotz dieser Ausgaben wuchs sein Wohlstand kontinuierlich. Während er sicherlich viel Geld durch den Zuckeranbau erwirtschaftete, ist ein anderer Teil seines Einkommens der Beteiligung am illegalen Sklavenhandel zu verdanken. Diesen hat er nachweislich unterstützt und sogar mit organisiert. Generell war Johann Moritz von Nassau-Siegen nicht bloß kein Gegner der Sklaverei, sondern hatte auch keine Skrupel sich persönlich daran zu bereichern. ",,
+,,,,
+,,Während Johann Moritz's Amtszeit als Gouverneur der niederländischen Kolonie in Brasilien von 1636 bis 1643 hat er dazu beig transatlantischen Sklavenhandel der Niederlande zu einem profitablen Geschäft gemacht. - involved in transatlantic slave trade - slave owner and trader - persönliche bereicherung am sklavenhandel,,
