Hint in progression system

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -214,7 +214,7 @@ NQ.Yes,"Yes, Proceed","Ja, Weiter","Yes, Proceed","Ja, Weiter",
 NQ.No,"No, Stay!",Hier bleiben!,"No, Stay!",Hier bleiben!,
 ,,,,,
 Book.Question,Do you want to return to the book?,Möchtest du zum Buch zurückkehren?,Do you want to return to the book?,Möchtest du zum Buch zurückkehren?,
-Book.Yes,Go back to Book,Go back to Book,Go back to Book,Go back to Book,
+Book.Yes,Go back to Book,Gehe zurück zum Buch,Go back to Book,Gehe zurück zum Buch,
 Book.No,I want to stay,Ich möchte bleiben,I want to stay,Ich möchte bleiben,
 ,,,,,
 TapAnywhere,Tap anywhere to continue,"Tippe irgendwo, um fortzufahren",Tap anywhere to continue,"Tippe irgendwo, um fortzufahren",
